tests/functional/data/transpiler/common/errors/restrict/applied_to_stmt.err
applied_to_stmt.cpp:3:9: error: 'restrict' attribute only applies to variable or type declaration
    3 |         @restrict for (int j = 0; j < 10; ++j; @inner) {
      |         ^
